Schema bump to 21.000 (#305)